# nougat.rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  lib.rs
src/proc_macros/: Cargo.toml  Gat-bang.rs  adju-gat-e.rs  mod.rs  utils.rs
src/proc_macros/gat-attr/: _mod.rs  trait_def.rs  trait_impl.rs  trait_use.rs
src/proc_macros/utils/: mb_file_expanded.rs
tests/: main.rs
